Use Java 11 HTTP client