@@ -2,10 +2,9 @@ package org.drjekyll.friendlycaptcha;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.net.http.HttpRequest;
 import java.nio.charset.StandardCharsets;
 import javax.annotation.Nonnull;
 import lombok.experimental.SuperBuilder;
@@ -41,27 +40,21 @@ public class FriendlyCaptchaVerifierV2 extends FriendlyCaptchaVerifier {
 
   @Override
   protected byte[] buildRequestBody(@Nonnull String solution) {
-    try {
-      String entity = "response=" + URLEncoder.encode(solution, "UTF-8");
-      if (!isEmpty(sitekey)) {
-        entity += "&sitekey=" + URLEncoder.encode(sitekey, "UTF-8");
-      }
-      return entity.getBytes(StandardCharsets.UTF_8);
-    } catch (UnsupportedEncodingException e) {
-      throw new FriendlyCaptchaException("Could not encode payload", e);
+    String entity = "response=" + URLEncoder.encode(solution, StandardCharsets.UTF_8);
+    if (!isEmpty(sitekey)) {
+      entity += "&sitekey=" + URLEncoder.encode(sitekey, StandardCharsets.UTF_8);
     }
+    return entity.getBytes(StandardCharsets.UTF_8);
   }
 
   @Override
-  protected void configureVersionSpecificHeaders(HttpURLConnection connection) {
-    connection.setRequestProperty("X-API-Key", apiKey);
+  protected void addVersionSpecificHeaders(HttpRequest.Builder requestBuilder) {
+    requestBuilder.header("X-API-Key", apiKey);
   }
 
   @Override
-  protected boolean processResponse(HttpURLConnection connection, InputStream inputStream)
-      throws IOException {
+  protected boolean processResponse(int statusCode, InputStream inputStream) throws IOException {
     VerificationResponseV2 response = readResponse(inputStream, VerificationResponseV2.class);
-    int statusCode = connection.getResponseCode();
     if (verbose) {
       log.info("Received response {} with status code {}", response, statusCode);
     }
